[package]
description = "CITA node."
name = "cita-chain"
version = "20.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
dotenv = "0.13.0"
clap = "2"
serde_json = "1.0"
cita-logger = "0.1.1"
cita-types = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
libproto = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
pubsub = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
cita-directories = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
util = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
error = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
jsonrpc-types = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
core = { path = "./core" }
common-types = { path = "./types" }
proof = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
cita_db = { version = "0.1", package = "cita-database" }

[build-dependencies]
util = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
