[package]
name = "cita-executor"
version = "20.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
dotenv = "0.13.0"
clap = "2"
serde = "1.0"
crossbeam-channel = "0.3.9"
serde_json = "1.0"
serde_derive = "1.0"
cita-logger = "0.1.1"
itertools = "0.5"

core-executor = { path = "./core" }
common-types = { path = "../cita-chain/types" }
cita-types = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
cita-directories = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
hashable = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
util = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
pubsub = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
libproto = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
error =  { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
proof = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
jsonrpc-types = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
cita-database = "0.1"

[build-dependencies]
util = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }

[dev-dependencies]
bincode = "0.8.0"
cita-ed25519 = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
cita-crypto = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_p2p" }
tempdir = "0.3.7"

[dependencies.cita-vm]
git = "https://github.com/citahub/cita-vm.git"
branch = "cita"
default-features = false
features = ["sha3hash"]

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
