[package]
name = "create-genesis"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
json = "0.11.13"
serde_json = "1.0.39"
ethabi = "11.0.0"
ethereum-types = "0.8.0"
hex = "0.3"
tiny-keccak = "1.4.2"
libsecp256k1 = "0.2.2"
clap = "2.33.0"
cita_trie = "2.0"

libproto = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }
cita-types = { git = "https://github.com/Pencil-Yao/cita-common.git", branch = "fix_up_eth_lib" }

[dependencies.cita-vm]
git = "https://github.com/citahub/cita-vm.git"
branch = "cita"
default-features = false
features = ["sha3hash"]

